Refactorización: nueva arquitectura del motor heuristico + creación de ADMIN + se agregan nuevas reglas heuristicas + se cambia el metodo de putuación de prioridad + se cambia en login user por email